Classicist Express/home/static/home.css
@import url(//db.onlinewebfonts.com/c/32441506567156636049eb850b53f02a?family=Times+New+Roman);

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: "Times New Roman", sans-serif;
  background: #fff;
  overflow-x: hidden;
  background-color: #fff5e8;
}

/* global styling */

img {
  width: 100%;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  color: #000;
}

h1 {
  color: #d6ae67;
}

/* header */

.headline p {
  text-align: center;
  opacity: 0.8;
  color: #000;
}

.top-head {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;

  background: #fff5e8;

  color: #fff;
  padding: 20px 30px;
}

.web-name {
  display: flex;
  align-items: center;
}

.headline {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.headline .image {
  width: 340px;
  height: 80px;
}

.headline .image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.top-head h1 {
  white-space: nowrap;
}

.top-head .fas {
  font-size: 2rem;
  cursor: pointer;
}

.ham-btn {
  color: #d6ae67;
  margin-right: 15px;
}

.logo {
  display: none;
}

@media (max-width: 800px) {
  .top-head h1 {
    font-size: 25px;
  }
  .top-head h1 span {
    display: block;
  }
  .logo {
    display: flex;
    width: 80px;
    height: 80px;
  }

  .logo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

/******* js related styling *****/

.times-btn {
  display: none;
  margin-right: 15px;
  color: #d6ae67;
}

.nav-bar {
  background-color: #d6ae67;
  background-image: url("https://www.transparenttextures.com/patterns/arches.png");
  transform: scaleY(0);
  transform-origin: top;
  opacity: 0;
  height: 0;
}

.show-nav {
  transform: scaleY(1);
  opacity: 1;
  transition: 0.8s;
  height: auto;
}

/********************/

.nav-bar ul li {
  text-align: center;
  display: block;
  padding: 15px 0;
  transition: all 1s ease-in-out;
}

.nav-bar ul li a {
  color: #fff;
  text-transform: capitalize;
}

.nav-bar ul li a:hover {
  color: #333;
  transition: 1s;
}

/** main ***/

main a {
  padding: 15px 0;
  display: block;
  transition: all 0.5s;
}

main span {
  transition: padding-left 0.5s;
}

main a:hover span {
  padding-left: 5px;
}

main a:hover {
  color: #d6ae67;
}

/* main container left */

.main-container-left {
  padding: 30px 10px;
}

.main-container-left > h2 {
  padding: 15px 0 15px 30px;
}

.main-container-left h3 {
  padding: 10px 0;
  font-size: 18px;
}

.main-container-left p {
  font-size: 15px;
  font-weight: 300;
}

.main-container-left article {
  padding: 10px;
}

.container-top-left {
  padding: 15px 30px;
}

.container-bottom-left {
  margin: 15px 30px;
}

/*** main container right */

.main-container-right {
  padding: 30px 10px;
}

.main-container-right > h2 {
  padding: 15px 0 15px 30px;
}

.main-container-right article {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  padding: 15px 0;
  border-bottom: 1px solid #d6ae67;
}

.main-container-right article:last-child {
  border-bottom: none;
}

.main-container-right img {
  width: 100px;
  height: 100px;
  align-self: center;
}

.main-container-right h4 {
  text-align: center;
  text-transform: uppercase;
  font-weight: 300;
  font-size: 12px;
  align-self: center;
}

.main-container-right article h2 {
  font-size: 18px;
  padding: 10px 0;
}

.main-container-right article p {
  font-size: 15px;
  font-weight: 300;
}

.main-container-right article div {
  margin-right: 10px;
}

/****** footer *****/

footer {
  background: #252525;
  color: #f3f3f3;
  padding: 30px;
}

footer h2 {
  padding: 10px 0;
}

footer p {
  padding: 10px 0;
  line-height: 1.3;
}

.footer-left,
.footer-right {
  margin: 0 20px;
}

footer > p {
  text-align: center;
  opacity: 0.8;
  margin-top: 20px;
}

.footer-right i {
  font-size: 1.8rem;
  color: #808080;
}

.footer-right input {
  font-size: 18px;
  border: none;
  background: transparent;
  outline: none;
  color: #808080;
  padding-right: 10px;
  width: 100%;
}

.footer-right div {
  display: flex;
  align-items: center;
  justify-content: start;
  width: 200px;
  padding: 10px 0;
  border-bottom: 1.6px solid #808080;
}

@media (max-width: 460px) {
  .main-container-right article {
    display: block;
  }

  .main-container-right article img {
    display: none;
  }
}

@media (max-width: 500px) {
  .main-container-right article {
    grid-template-columns: 1fr 3fr;
    grid-template-rows: 1fr 1fr;
  }

  .main-container-right article h4 {
    grid-row: 1/2;
    grid-column: 1/2;
    align-self: flex-start;
  }

  .main-container-right article img {
    grid-row: 2/3;
    grid-column: 1/2;
  }

  .main-container-right article div {
    grid-row: 1/3;
    grid-column: 2/3;
  }
}

@media (min-width: 768px) {
  .container-bottom-left {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 800px) {
  /* nav */
  .ham-btn,
  .times-btn {
    display: none !important;
  }

  .navigation-container {
    display: flex;

    align-items: center;
    flex-wrap: wrap;
  }

  .nav-bar {
    flex: 1 0 auto;
    /*demo*/
    /* background: #252525; */
    /*demo*/
    transform: scaleY(1);
    opacity: 1;
    height: auto;
    width: 100%;
    overflow-x: auto;
    display: flex;
    padding: 0 40px;
    white-space: nowrap;
  }

  .sticky {
    position: fixed;
    top: 0;
  }

  .nav-bar::-webkit-scrollbar {
    display:none;
  }

  

  .nav-bar nav ul {
    display: flex;
    justify-content: center;
  }
  .nav-bar nav ul li {
    padding-right: 30px;
  }

  .nav-bar nav ul li:hover {
    background: none;
  }

  .top-head {
    flex: 0 0 15%;
  }

  main {
    margin: 0 60px;
  }

  .footer-container {
    display: flex;
  }

  .footer-right,
  .footer-left {
    flex: 1;
  }
}

@media (min-width: 992px) {
  main {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 425px) {
  .headline .image {
    width: 300px;
  }
}

@media (max-width: 400px) {
  .headline .image {
    width: 250px;
  }
}

